# unhook_sites

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  compose.prod.yml  manage.py  pyproject.toml
.github/workflows/: docker.yml
docs/: implementation-plan.md  static-public-layer.md  unhook-backup-script  unhook-sites-backup.service  unhook-sites-backup.timer
events/: admin.py  apps.py  models.py
events/migrations/: 0001_initial.py  0002_alter_event_options_alter_keydate_options.py
media_library/: admin.py  apps.py  models.py  payload.py
media_library/migrations/: 0001_initial.py  0002_remove_imagevariant_unique_image_variant_kind_per_image_and_more.py  0003_alter_image_site.py  0004_alter_image_options_alter_imagevariant_options_and_more.py
music/: admin.py  apps.py  models.py
music/migrations/: 0001_initial.py  0002_alter_album_additional_images_and_more.py  (+2 more)
payload_migration/: apps.py  audit.py  client.py  importers.py  lexical.py
photos/: admin.py  apps.py  models.py
public_site/: admin.py  apps.py  content_defaults.py  context_processors.py  middleware.py  models.py  urls.py  views.py
sites_core/: admin.py  apps.py  models.py
tests/: test_admin_scoping.py  test_domain_models.py  test_media_admin_scoping.py  test_media_library.py  test_models.py  test_payload_migration.py  test_project.py  test_public_site.py  test_settings.py
unhook_sites/: admin.py  asgi.py  config.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
visual_art/: admin.py  apps.py  models.py
writing/: admin.py  apps.py  models.py
(+71 files in other folders)
