[project]
name = "unhook-sites"
version = "0.1.0"
description = "Small Django sites rebuilt from legacy CMS exports."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "django-prose-editor>=0.26.0",
    "pillow>=12.2.0",
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "unhook_sites.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

