[project]
name = "unhook-sites"
version = "0.1.0"
description = "Small Django sites rebuilt from legacy CMS exports."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "django-prose-editor>=0.26.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "unhook_sites.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
env = [
    "DEBUG=True",
    "SECRET_KEY=django-insecure-test-secret-key",
    "ALLOWED_HOSTS=localhost,127.0.0.1,testserver,kent-artiste.com",
    "SECURE_SSL_REDIRECT=False",
    "SESSION_COOKIE_SECURE=False",
    "CSRF_COOKIE_SECURE=False",
    "SECURE_HSTS_SECONDS=0",
    "SECURE_HSTS_INCLUDE_SUBDOMAINS=False",
    "SECURE_HSTS_PRELOAD=False",
]

[dependency-groups]
dev = [
    "pytest-env>=1.6.0",
]
